--- a/Task-Manager/src/app/login/login.component.html
+++ b/Task-Manager/src/app/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+<!-- <p>login works!</p> -->
+<!-- <h2>Login</h2>
+    <form>
+      <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" [(ngModel)]="name">
+      </div>
+      <div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" [(ngModel)]="email">
+      </div>
+      <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" [(ngModel)]="password">
+      </div>
+      <button type="submit">Login</button>
+    </form> -->
+    <div class="container">
+      <h2>Login</h2>
+      <!-- <form class="login-form" (ngSubmit)="onLogin()"> -->
+        <form class="login-form" (submit)="onLogin(loginForm)" #loginForm = "ngForm">
+        <!-- <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" [(ngModel)]="name">
+        </div> -->
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" [(ngModel)]="email">
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" [(ngModel)]="password">
+        </div>
+        <button type="submit">Login</button>
+      </form>
+    </div>
