Adding routing for login and register pages.

--- a/Task-Manager/src/app/app.component.html
+++ b/Task-Manager/src/app/app.component.html
@@ -1,15 +1,15 @@
 <!-- <p>idk</p> -->
 
-<div class="container">
+<!-- <div class="container">
   <div class="register">
     <app-register></app-register>
   </div>
   <div class="login">
     <app-login></app-login>
   </div>
-</div>
+</div> -->
 
-
+<router-outlet></router-outlet>
 
 
 
