--- a/Task-Manager/src/app/login/login.component.html
+++ b/Task-Manager/src/app/login/login.component.html
@@ -32,5 +32,6 @@
           <input type="password" id="password" name="password" [(ngModel)]="password">
         </div>
         <button type="submit">Login</button>
+        <a href="register" class="registerLink">Register</a>
       </form>
     </div>
