--- a/Task-Manager/src/app/register/register.component.html
+++ b/Task-Manager/src/app/register/register.component.html
@@ -32,5 +32,6 @@
           <input type="password" id="password" name="password" [(ngModel)]="password">
         </div>
         <button type="submit">Register</button>
+        <a href="" class="loginLink">Login</a>
       </form>
     </div>
