--- a/Task-Manager/src/app/app.component.html
+++ b/Task-Manager/src/app/app.component.html
@@ -11,7 +11,7 @@
 
 <router-outlet></router-outlet>
 
-
+<app-footer></app-footer>
 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
