priority in task create

--- a/Task-Manager/src/app/login/login.component.html
+++ b/Task-Manager/src/app/login/login.component.html
@@ -31,7 +31,7 @@
           <label for="password">Password:</label>
           <input type="password" id="password" name="password" [(ngModel)]="password">
         </div>
-        <button type="submit">Login</button>
+        <button class="btn" type="submit">Login</button>  
         <a href="register" class="registerLink">Register</a>
       </form>
     </div>
