--- a/Task-Manager/src/app/task-list/task-list.component.html
+++ b/Task-Manager/src/app/task-list/task-list.component.html
@@ -14,7 +14,7 @@
         <p>{{ task.description }}</p>
         <p>Priority: {{ task.priority }}</p>
         <p>Date: {{ task.date }}</p>
-        <p>Completed: {{ task.completed ? 'Yes' : 'No' }}</p>
+        <p>Completed: {{ task.status ? 'Yes' : 'No' }}</p>
       </div>
     </div>
   </div>
