Adding header component.

--- a/Task-Manager/src/app/header/header.component.html
+++ b/Task-Manager/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<nav class="navbar">
+  <div class="nav-links">
+    <a routerLink="/task-list">Task List</a>
+    <a routerLink="/task-create">Create Task</a>
+  </div>
+  <div class="right">
+    <button class="logout" (click)="logout()">Logout</button>
+  </div>
+</nav>
