Adding header component and login/logout routing.

--- a/Task-Manager/src/app/header/header.component.html
+++ b/Task-Manager/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="nav-links">
-    <a routerLink="/task-list">Task List</a>
-    <a routerLink="/task-create">Create Task</a>
+    <a (click)="goToListTasks()">Task List</a>
+    <a (click)="goToCreateTask()">Create Task</a>
   </div>
   <div class="right">
     <button class="logout" (click)="logout()">Logout</button>
